[package]
name = "wraith_engine"
version = "0.1.0"
edition = "2018"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen"] }
raw-window-handle = "0.3"
emscripten_main_loop = "0.1"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image","gfx","mixer","raw-window-handle"]
