[package]
name = "wraith_engine"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["crates/*"]

[features]
default = [
	
]
sdl2 = ["wraith_sdl2"]

[dependencies]
#legion = { version = "0.4.0", default-features = false, features = ["wasm-bindgen"] }
emscripten_main_loop = "0.1"
wraith_sdl2 = { version = "0.1", path = "crates/wraith_sdl2", optional = true }
